--- a/TODO.txt
+++ b/TODO.txt
@@ -4,21 +4,24 @@
  -  Figure out a nicer API for Adder.
  -  Add tests for the Adder module.
 
-* Implement support for packed data values.
- - Use FbleFuncValue APIs in generate_aarch64.c.
+* Remove limit on fbleobj pool.
+ - I don't think we need it anymore since we optimized the code generated for
+   literals.
+
+# Clean up FbleValue API.
  - Change FbleNewFuncValue to take statics as an array argument.
- - See if FbleValueTag and FbleValue subtypes can be made internal to value.c
- - See if packed / unpacked can be hidden internal to value.c
- - Remove Fble prefixes on types internal to value.c
+ - Clean up value.c.
+ - Change FbleValue to raw intptr_t.
+   Switch FbleNullValue back to NULL.
+ - Remove Fble prefixes on types internal to value.c and otherwise cleanup
+   value.
+
+* Implement support for packed data values.
  - Add FbleDataTypeValue.
  - Implement FbleDataTypeInstr for allocating FbleDataTypeValues.
  - Change the compiler to allocate FbleDataTypeValues when appropriate.
  - Pass type to struct and union construction and access functions.
  - Implement packing for struct and union values.
-
-* Update documentation around use of NULL FbleValue
-  It should say FbleNullValue instead of 'NULL'.
-  Or switch back to NULL.
 
 * Fix missing dependency of generation of build.ninja on new spec tests.
 
