Figure out the fork-race memory consumption issue.
It's due to the profile threads hashmap growing but not shrinking, and
then making a copy of it for every thread we fork. Not sure how best to
fix the issue yet.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,10 @@
+* Fix profile table memory issue.
+
 * Implement md5 in Hwdg
  -  Give separate Tests modules for each submodule.
  -  Move Adder module to a Designs subdirectory.
  -  Figure out a nicer API for Adder.
  -  Add tests for the Adder module.
-
-* Figure out why fork race test takes so much memory.
- - And remove -j 1 from default build once we've figured it out.
 
 * Clean up FbleValue API.
  - Switch to using FbleValue** args version of FbleNewStructValue for
