Factor out common code for PushStackFrame.
In preparation for switching to a custom allocator for the stack.

fble bench interpreted:  7m58s -> 7m55s
fble bench compiled:     4m59s -> 4m58s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+* Optimize stack allocations
+ - Implement PushStackFrame function analogous to PopStackFrame.
+ - Switch to a mmap based custom allocator for stack allocations.
+
 * Implement md5 in Hwdg
  -  Give separate Tests modules for each submodule.
  -  Move Adder module to a Designs subdirectory.
