Track fork/join using FbleThread instead of FbleStack.
fble bench interpreted:  7m55s -> 7m48s
fble bench compiled:     4m58s -> 4m56s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 * Optimize stack allocations
- - Implement PushStackFrame function analogous to PopStackFrame.
+ - Reorganize parent/child thread relationship so that there is clear
+   ownership over stack allocations.
+ - Switch to using stack allocator for thread stacks.
  - Switch to a mmap based custom allocator for stack allocations.
 
 * Implement md5 in Hwdg
