Remove unused msg argument to FbleRawAlloc.
Performance changes since last reported:

fble bench interpreted:  7m27s -> 7m28s
fble bench compiled:     4m32s -> 4m35s

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,6 +9,9 @@
 
 * Remove msg argument to allocation routines.
 
+* Consider running some of the tests under valgrind?
+ - To catch memory issues that could otherwise go undetected?
+
 * Implement md5 in Hwdg
  -  Give separate Tests modules for each submodule.
  -  Move Adder module to a Designs subdirectory.
