Remove assertion from FbleStackFree.
So we don't have to keep track of the most recently allocated pointer.

fble bench interpreted:  7m28s -> 7m21s
fble bench compiled:     4m35s -> 4m31s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,4 @@
-* Optimize stack allocations
- - Reorganize parent/child thread relationship so that there is clear
-   ownership over stack allocations.
- - Switch to using stack allocator for thread stacks.
- - Switch to a mmap based custom allocator for stack allocations.
+* Switch to a mmap based custom allocator for stack allocations.
 
 * Consider running some of the tests under valgrind?
  - To catch memory issues that could otherwise go undetected?
