--- a/TODO.txt
+++ b/TODO.txt
@@ -13,10 +13,8 @@
  -  Add tests for the Adder module.
 
 * Implement support for packed data values.
- - Add FbleStructTypeValue and FbleUnionTypeValue.
- - Implement FbleStructTypeInstr and FbleUnionTypeInstr.
- - Change the compiler to allocate FbleStructTypeValue and FbleUnionTypeValue
-   when appropriate.
+ - Implement FbleDataTypeInstr.
+ - Change the compiler to allocate FbleDataTypeValue when appropriate.
  - Pass type to struct and union construction and access functions.
  - Implement packing for struct and union values.
 * Avoid calling 'FbleRelease' in those cases where the compiler can tell
