--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+* Implement tail calls directly for compiled code.
 
 * [/Invaders%] Add collision detection for bullets.
  - Maybe that's done by the game after every tick.
@@ -13,7 +14,6 @@
  -  Add tests for the Adder module.
 
 * Implement support for packed data values.
- - Implement FbleDataTypeInstr.
  - Change the compiler to allocate FbleDataTypeValue when appropriate.
  - Pass type to struct and union construction and access functions.
  - Implement packing for struct and union values.
