Initial draft of PiDigits implementation for benchmark game.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+* Implement pidigits from benchmark game?
 * Implement tail calls directly for compiled code.
 
 * [/Invaders%] Add collision detection for bullets.
