--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,11 @@
 * Implement pidigits from benchmark game?
+ - Change Stdio interface to take command line arguments?
+ - Add an option to stream out a character at a time instead of line at a
+   time?
+ - Implement a benchmark for PiDigits.
+ - Implement tests for PiDigits.
+ - Implement expected interface for benchmark games and check output.
+
 * Implement tail calls directly for compiled code.
 
 * [/Invaders%] Add collision detection for bullets.
