--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,10 @@
-* Implement pidigits from benchmark game?
+* Implement pidigits from benchmark game
  - Change Stdio interface to take command line arguments?
- - Add an option to stream out a character at a time instead of line at a
-   time?
- - Implement a benchmark for PiDigits.
+ - Add an option to Stdio to stream out a character at a time instead of line
+   at a time?
  - Implement tests for PiDigits.
  - Implement expected interface for benchmark games and check output.
+ - Change PiDigits benchmark to use Stdio program as basis.
 
 * Implement tail calls directly for compiled code.
 
