--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
 * Implement pidigits from benchmark game
- - Change Stdio interface to take command line arguments?
  - Implement tests for PiDigits.
  - Change PiDigits benchmark to use Stdio program as basis.
+
+* Add --verbose option to fble-tests.
 
 * Implement tail calls directly for compiled code.
 
