Take N as input to PiDigits Stdio program.
And use the PiDigits Stdio program for the benchmark.

fble bench interpreted: 6m22s
fble bench compiled:    4m27s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,4 @@
-* Implement pidigits from benchmark game
- - Implement tests for PiDigits.
- - Change PiDigits benchmark to use Stdio program as basis.
+* Implement tests for PiDigits.
 
 * Implement tail calls directly for compiled code.
 
