Consolidate BenchmarkGame benchmarks into a single benchmark.
So we don't give too much weight to these silly benchmarks in our
overall fble benchmark.

fble bench interpreted: 6m52s
fble bench compiled:    4m37s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 * Implement tests for PiDigits.
 * Implement tests for BinaryTrees.
+* Implement a regular expression engine?
 
 * Implement tail calls directly for compiled code.
 
