--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,8 @@
 
 * Implement tail calls directly for compiled code.
 
+* [/Invaders%] Fix bug where you can kill an alien on the left by shooting to
+               the right of all the aliens.
 * [/Invaders%] Add death animation when aliens are killed.
 * [/Invaders%] Go to the next level when all the aliens are killed.
 
