--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,13 @@
+* [/Invaders%] UFO.
+ - Have it launch only once every 10000 or so ticks.
+ - Add score assignment.
+  Point value randomly chosen: 10% 300, 20% 150, 30% 100, 40% 50
+ - Display score on screen after kill.
+* [/Invaders%] Go to the next level when all the aliens are killed.
+* [/Invaders%] Lose the game when aliens reach the bottom.
+* [/Invaders%] Add Alien bombs and squiggles.
+* [/Invaders%] Add the bases.
+
 * Implement fannkuchredux benchmark?
   Permutation order looks like:
     0, 1, 2, 3, ..., n
@@ -9,15 +19,6 @@
     In other words, keep track of current length, rotate the first n elements.
 * Implement IEEE floating point?
 * Implement a regular expression engine?
-
-* [/Invaders%] Go to the next level when all the aliens are killed.
-* [/Invaders%] Lose the game when aliens reach the bottom.
-* [/Invaders%] UFO.
- - Have it launch only once every 10000 or so ticks.
- - Add collision detection and score assignment.
-  Point value randomly chosen: 10% 300, 20% 150, 30% 100, 40% 50
-* [/Invaders%] Add Alien bombs and squiggles.
-* [/Invaders%] Add the bases.
 
 * Can we make tail calls from compiled to compiled code more efficient?
  - Seems like, if we know we are calling into compiled code, we could avoid
