--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 
+* [/Graphics] Figure out which pixels on the edge of a triangle to include.
 * [/Graphics] Fix issue with adjacent triangles having a gap between them.
 * [/Graphics] Add a left to right scan version of Triangles and pick that if
   the distance is shorter than bottom to top.
