Track angle of rotation.
Recompute the rotation matrix any time the angle is updated to avoid
issues with loss of precision and de-orthonormalization of the rotation
matrix.

The rotation test is failing for some reason. Needs debug.

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,9 +4,7 @@
   Camera%.Triangle
  - So we can skip clipping the triangle if we aren't going to show it.
 
-* [/Graphics] Clean up the orthonormal matrix occasionally?
- - To start, just store an angle and compute/lookup cos,sin on the fly.
-   This works as long as we only can rotate around one axis.
+* [/Graphics] Fix failing rotation test.
 
 * [/Graphics] Figure out how to improve performance of drawing triangles.
  - We should be able to generate the points on a line incrementally
