--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 * [/Graphics] Implement proper clipping support.
  - Debug failing test.
+   The math by hand looks right to me. Something else must be going wrong.
  - Test and fix case where we clip to a z value of 0.
 
 * [/Graphics] Figure out how to improve performance of drawing triangles.
