--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,7 @@
 
-* [debugger] Emit a compile_unit DIE node when generating assembly.
+* [debugger] Emit debug info entries for functions in generated assembly.
 
 * [/Graphics] Implement proper clipping support.
- - Debug failing test.
-   The math by hand looks right to me. Something else must be going wrong.
  - Test and fix case where we clip to a z value of 0.
 
 * [/Graphics] Figure out how to improve performance of drawing triangles.
